--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@loopback/context": "^1.25.1",
     "@loopback/core": "^1.12.1",
     "@loopback/openapi-v3": "^1.11.0",
-    "@loopback/repository": "^1.17.0",
+    "@loopback/repository": "git+https://git@github.com/codejamninja/loopback-next.git#npm/codejamninja/has-many-through-using-has-many@1.11.0-rc.1",
     "@loopback/rest": "^1.25.1",
     "@loopback/rest-explorer": "^1.4.7",
     "@loopback/service-proxy": "^1.3.14",
